# goit-pyweb-13-p2

./: .gitignore  pyproject.toml
quotes_project/quotes/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
quotes_project/quotes/migrations/: 0001_initial.py  0002_tag_author_created_at_quote_created_at_and_more.py
quotes_project/quotes/static/quotes/: style.css
quotes_project/quotes/templates/quotes/: author.html  author_about.html  base.html  index.html  quote.html  tags.html
quotes_project/quotes/templatetags/: extract_tags.py
quotes_project/quotes_project/: asgi.py  settings.py  urls.py  wsgi.py
quotes_project/users/: forms.py  urls.py  views.py
quotes_project/users/static/users/: style.css
quotes_project/users/templates/users/: login.html  password_reset_email.html  signup.html
quotes_project/utilities/: add_quotes.py  authors.json  migration.py
